--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=TIGER@123
 DB_NAME=school_db
+MYSQLHOST=mysql.railway.internal
+MYSQLUSER=root
+MYSQLPASSWORD=yGBkJhZEtCdSOcKNUwnPQOpHnewpkVdE
+MYSQLDATABASE=railway
+MYSQLPORT=3306
+
