--- a/.env
+++ b/.env
@@ -1,10 +1,7 @@
-DB_HOST=localhost
+DB_HOST=db4free.net       # NOT localhost; e.g., db4free.net or Render's DB host
 DB_USER=root
 DB_PASSWORD=TIGER@123
 DB_NAME=school_db
-MYSQLHOST=mysql.railway.internal
-MYSQLUSER=root
-MYSQLPASSWORD=yGBkJhZEtCdSOcKNUwnPQOpHnewpkVdE
-MYSQLDATABASE=railway
-MYSQLPORT=3306
+DB_PORT=3306
+
 
